feat(profile): done but have vertical alignment issues

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,17 @@
 @import url("../vendor/normalize.css");
 
+@import url("../vendor/fonts/fonts.css");
+
 @import url("../blocks/page/page.css");
 
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/avatar/avatar.css);
+@import url(../blocks/avatar/__image/avatar__image.css);
+@import url(../blocks/profile-info/profile-info.css);
+@import url(../blocks/profile-info/__name/profile-info__name.css);
+@import url(../blocks/profile-info/__button-edit/profile-info__button-edit.css);
+@import url(../blocks/profile-info/__occupation/profile-info__occupation.css);
+@import url(../blocks/profile/__button-add/profile__button-add.css);
