--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,10 @@
 .page {
   background-color: #000000;
+  color: #ffffff;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
