--- a/pages/index.css
+++ b/pages/index.css
@@ -7,11 +7,18 @@
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 
-@import url(../blocks/profile/profile.css);
-@import url(../blocks/avatar/avatar.css);
-@import url(../blocks/avatar/__image/avatar__image.css);
-@import url(../blocks/profile-info/profile-info.css);
-@import url(../blocks/profile-info/__name/profile-info__name.css);
-@import url(../blocks/profile-info/__button-edit/profile-info__button-edit.css);
-@import url(../blocks/profile-info/__occupation/profile-info__occupation.css);
-@import url(../blocks/profile/__button-add/profile__button-add.css);
+@import url("../blocks/profile/profile.css");
+@import url("../blocks/avatar/avatar.css");
+@import url("../blocks/avatar/__image/avatar__image.css");
+@import url("../blocks/profile-info/profile-info.css");
+@import url("../blocks/profile-info/__name/profile-info__name.css");
+@import url("../blocks/profile-info/__button-edit/profile-info__button-edit.css");
+@import url("../blocks/profile-info/__occupation/profile-info__occupation.css");
+@import url("../blocks/profile/__button-add/profile__button-add.css");
+
+@import url("../blocks/elements/elements.css");
+@import url("../blocks/element/element.css");
+@import url("../blocks/element/__image/element__image.css");
+@import url("../blocks/element/__wrap/element__wrap.css");
+@import url("../blocks/element/__title/element__title.css");
+@import url("../blocks/element/__icon-like/element__icon-like.css");
