--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,9 @@
 .header {
-  margin: 45px auto 0;
+  margin: 0 auto;
   max-width: 880px;
-  width: 68.75vw;
-  display: flex;
+  /* width: 68.75vw; */
+  /*                                                                                                                 */
   justify-content: flex-start;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  text-align: left;
 }
