--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,4 @@
 .page {
-  background-color: #000000;
   color: #ffffff;
   font-family: "Inter", "Arial", sans-serif;
   font-size: 16px;
@@ -11,6 +10,10 @@
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  display: flex;
-  flex-direction: column;
+  /*   display: flex;
+  flex-direction: column; */
+  /* display: block; */
+  /* max-width: 880px; */
+  margin: 0 auto 0;
+  background-color: #000000;
 }
