--- a/pages/index.css
+++ b/pages/index.css
@@ -22,3 +22,6 @@
 @import url("../blocks/element/__wrap/element__wrap.css");
 @import url("../blocks/element/__title/element__title.css");
 @import url("../blocks/element/__icon-like/element__icon-like.css");
+
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/copyright/copyright.css");
