feat(popup): done

--- a/blocks/element/__icon-like/element__icon-like.css
+++ b/blocks/element/__icon-like/element__icon-like.css
@@ -2,3 +2,12 @@
   width: 21px;
   height: 19px;
 }
+
+.element__icon-like:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.element__icon-like:active {
+  background-color: #000000;
+}
