--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,11 @@
   height: 33px;
   margin: 45px auto 41px;
 }
+
+@media screen and (max-width: 614px) {
+  .header__logo {
+    margin: 28px auto 32px;
+    width: 126px;
+    height: 24px;
+  }
+}
