--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,15 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   text-align: left;
 }
+
+@media screen and (max-width: 913px) {
+  .header {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 614px) {
+  .header {
+    max-width: 282px;
+  }
+}
