--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,15 @@
 @import url("../blocks/profile-info/__occupation/profile-info__occupation.css");
 @import url("../blocks/profile/__button-add/profile__button-add.css");
 
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__button-close/popup__button-close.css");
+@import url("../blocks/form-edit-profile/form-edit-profile.css");
+@import url("../blocks/form-edit-profile/__heading/form-edit-profile__heading.css");
+@import url("../blocks/form-edit-profile/__name/form-edit-profile__name.css");
+@import url("../blocks/form-edit-profile/__occupation/form-edit-profile__occupation.css");
+@import url("../blocks/form-edit-profile/__button-submit/form-edit-profile__button-submit.css");
+
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/element/element.css");
 @import url("../blocks/element/__image/element__image.css");
