--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,20 +5,10 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: none;
+  z-index: 3;
+
+  /*   display: flex;
   justify-content: center;
-  align-items: center;
-  /*   z-index: 2; */
-  /* display: none; */
+  align-items: center; */
 }
-
-/* @media screen and (max-width: 614px) {
-  .popup {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-
-  }
-} */
