--- a/blocks/profile-info/__job/profile-info__job.css
+++ b/blocks/profile-info/__job/profile-info__job.css
@@ -1,12 +1,12 @@
-.profile-info__occupation {
+.profile-info__job {
   font-size: 18px;
   line-height: 22px;
-  grid-area: profile-info__occupation;
+  grid-area: profile-info__job;
   margin: 0;
 }
 
 @media screen and (max-width: 614px) {
-  .profile-info__occupation {
+  .profile-info__job {
     font-size: 14px;
     line-height: 17px;
     text-align: center;
