--- a/blocks/form-edit-profile/__heading/form-edit-profile__heading.css
+++ b/blocks/form-edit-profile/__heading/form-edit-profile__heading.css
@@ -3,12 +3,12 @@
   font-size: 24px;
   line-height: 29px;
   width: 358px;
-  margin: 34px auto 0;
+  margin: 34px auto 24.26px;
 }
 
 @media screen and (max-width: 614px) {
   .form-edit-profile__heading {
     width: 238px;
-    margin-top: 25px;
+    margin: 25px auto 46px;
   }
 }
