--- a/blocks/form-edit-profile/__input/form-edit-profile__input.css
+++ b/blocks/form-edit-profile/__input/form-edit-profile__input.css
@@ -1,4 +1,4 @@
-.form-edit-profile__job {
+.form-edit-profile__input {
   width: 100%;
   margin: 29.74px auto 0;
   border: none;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 614px) {
-  .form-edit-profile__job {
+  .form-edit-profile__input {
     padding: 0 0 9px 0;
     margin: 30px auto 0;
   }
