--- a/blocks/profile-info/__button-edit/profile-info__button-edit.css
+++ b/blocks/profile-info/__button-edit/profile-info__button-edit.css
@@ -2,7 +2,7 @@
   width: 24px;
   height: 24px;
   border: 1px solid #ffffff;
-  background-color: #000000;
+  background-color: transparent;
   background-image: url("../../../images/icons/button-edit-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
