--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -3,7 +3,8 @@
   margin-right: 0;
   margin-left: auto;
   height: 50px;
-  background-color: #000000;
+  /*   background-color: #000000; */
+  background-color: transparent;
   background-image: url("../../../images/icons/button-add-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
