--- a/blocks/form-edit-profile/__heading/form-edit-profile__heading.css
+++ b/blocks/form-edit-profile/__heading/form-edit-profile__heading.css
@@ -10,5 +10,7 @@
   .form-edit-profile__heading {
     width: 238px;
     margin: 25px auto 46px;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
