--- a/blocks/profile-info/__job/profile-info__job.css
+++ b/blocks/profile-info/__job/profile-info__job.css
@@ -3,6 +3,9 @@
   line-height: 22px;
   grid-area: profile-info__job;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 614px) {
