--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,7 @@
 @import url("../blocks/element/__wrap/element__wrap.css");
 @import url("../blocks/element/__title/element__title.css");
 @import url("../blocks/element/__button-like/element__button-like.css");
+@import url("../blocks/element/__button-like/_active/element__button-like_active.css");
 
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/copyright/copyright.css");
