--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,7 @@
   width: 282px;
   background-color: #ffffff;
   border-radius: 10px;
+  position: relative;
 }
 
 /* @media screen and (max-width: 300px) {
