--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,6 +1,6 @@
 .form {
   width: 358px;
-  margin: 0 auto 0;
+  margin: 0 36px;
   font-size: 14px;
   line-height: 17px;
   color: #000000;
@@ -12,5 +12,6 @@
 @media screen and (max-width: 614px) {
   .form {
     width: 238px;
+    margin: 0 22px;
   }
 }
