--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,15 +2,15 @@
   position: relative;
   background-color: #ffffff;
   color: #000000;
-  width: 430px;
+  /* width: 430px; */
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   display: flex;
   flex-direction: column;
 }
 
-@media screen and (max-width: 614px) {
+/* @media screen and (max-width: 614px) {
   .popup__container {
     width: 282px;
   }
-}
+} */
