feat(popup): enabled popup image

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,12 +1,13 @@
 .popup__container {
   position: relative;
-  background-color: #ffffff;
+  background-color: transparent;
   color: #000000;
   /* width: 430px; */
-  border-radius: 10px;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  /*   max-width: 90vw;
+  max-height: 70vh; */
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
 }
 
 /* @media screen and (max-width: 614px) {
