--- a/pages/index.css
+++ b/pages/index.css
@@ -18,12 +18,17 @@
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__container/_background-white/popup__container_background-white.css");
+@import url("../blocks/popup/__container/_bordered/popup__container_bordered.css");
 @import url("../blocks/popup/__button-close/popup__button-close.css");
 
 @import url("../blocks/form/form.css");
 @import url("../blocks/form/__heading/form__heading.css");
 @import url("../blocks/form/__input/form__input.css");
 @import url("../blocks/form/__button-submit/form__button-submit.css");
+
+@import url("../blocks/popup-image/popup-image.css");
+@import url("../blocks/popup-image/__title/popup-image__title.css");
 
 /* @import url("../blocks/form-edit-profile/form-edit-profile.css");
 @import url("../blocks/form-edit-profile/__heading/form-edit-profile__heading.css");
