--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -10,6 +10,7 @@
   border: 2px solid #ffffff;
   border-radius: 2px;
   padding: 0;
+  transition: opacity 0.4s ease-in-out;
 }
 
 .profile__button-add:hover {
