--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,8 +5,11 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  display: none;
+  display: flex;
   z-index: 3;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.8s, opacity 0.8s ease-in-out;
 }
