--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
 
 @import url("../blocks/popup/__button-close/popup__button-close.css");
 @import url("../blocks/popup/__button-close/_content/popup__button-close_content_image.css");
+@import url("../blocks/popup/__button-close/_content/popup__button-close_content_form.css");
 
 @import url("../blocks/form/form.css");
 @import url("../blocks/form/__heading/form__heading.css");
