fix(popup image): class name refactoring. Now image is the element of the popup

--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,9 @@
 @import url("../blocks/form/__input/form__input.css");
 @import url("../blocks/form/__button-submit/form__button-submit.css");
 
+@import url("../blocks/popup/__image/popup__image.css");
+@import url("../blocks/popup/__image-title/popup__image-title.css");
+
 @import url("../blocks/popup-image/popup-image.css");
 @import url("../blocks/popup-image/__title/popup-image__title.css");
 
