--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,9 @@
 @import url("../blocks/popup/__button-close/_content/popup__button-close_content_form.css");
 @import url("../blocks/popup/__image/popup__image.css");
 @import url("../blocks/popup/__image-title/popup__image-title.css");
+@import url("../blocks/popup/__input/_type/popup__input_type_error.css");
+@import url("../blocks/popup/__error/popup__error.css");
+@import url("../blocks/popup/__error/_visible/popup__error_visible.css");
 
 @import url("../blocks/form/form.css");
 @import url("../blocks/form/__heading/form__heading.css");
