--- a/blocks/form/__button-submit/form__button-submit.css
+++ b/blocks/form/__button-submit/form__button-submit.css
@@ -2,12 +2,11 @@
   width: 100%;
   height: 50.15px;
   margin: 48px auto 36.51px;
-  background-color: #000000;
-  color: #ffffff;
   font-size: 18px;
   line-height: 22px;
   padding: 0;
   transition: opacity 0.4s ease-in-out;
+  border-radius: 2px;
 }
 
 .form__button-submit:hover {
