--- a/pages/index.css
+++ b/pages/index.css
@@ -20,11 +20,14 @@
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__container/_content/popup__container_content_image.css");
 @import url("../blocks/popup/__container/_content/popup__container_content_form.css");
+@import url("../blocks/popup/__button/popup__button.css");
+@import url("../blocks/popup/__button/_disabled/popup__button_disabled.css");
 @import url("../blocks/popup/__button-close/popup__button-close.css");
 @import url("../blocks/popup/__button-close/_content/popup__button-close_content_image.css");
 @import url("../blocks/popup/__button-close/_content/popup__button-close_content_form.css");
 @import url("../blocks/popup/__image/popup__image.css");
 @import url("../blocks/popup/__image-title/popup__image-title.css");
+@import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__input/_type/popup__input_type_error.css");
 @import url("../blocks/popup/__error/popup__error.css");
 @import url("../blocks/popup/__error/_visible/popup__error_visible.css");
