--- a/blocks/form/__button-submit/form__button-submit.css
+++ b/blocks/form/__button-submit/form__button-submit.css
@@ -9,7 +9,7 @@
   border-radius: 2px;
 }
 
-.form__button-submit:hover {
+.form__button-submit:hover:not(:disabled) {
   opacity: 0.8;
   cursor: pointer;
 }
