--- a/src/page/index.css
+++ b/src/page/index.css
@@ -46,6 +46,7 @@
 @import url("../blocks/element/__title/element__title.css");
 @import url("../blocks/element/__button/_action/element__button_action_like.css");
 @import url("../blocks/element/__button/_action/element__button_action_like_active.css");
+@import url("../blocks/element/__like-counter/element__like-counter.css");
 
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/copyright/copyright.css");
