refact: class avatar__overlay replaced by profile__avatar-overlay - blocking issue

--- a/src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
+++ b/src/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
@@ -1,4 +1,4 @@
-.avatar__overlay {
+.profile__avatar-overlay {
   background-image: url("../../../images/icons/button-edit-avatar-icon.svg");
   background-size: 26px 26px;
   background-position: 50%;
